master: building out home page

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,20 @@
     margin: 1rem;
 }
 
+.home-container img {
+    text-align: center;
+    height: auto;
+    width: 20%;
+
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 a {
 	font-size: 23px;
 }
